...
                        visible={menuVisible}
                        onDismiss={() => setMenuVisible(false)}
                        anchor={
                            <TouchableOpacity
                                style={styles.actionIcon}
                                onPress={() => setMenuVisible(true)}
                                testID="share-button"
                            >
                                <ShareIcon />
                            </TouchableOpacity>
                        }
                    >
                        <Menu.Item
                            onPress={copyLink}
                            title="Copy Link"
                            titleStyle={{ fontSize: 16 }}
                            style={{ height: 30 }}
                        />
                        <Menu.Item
                            onPress={sharePost}
                            title="Share Post"
...
