...
                    inviteMoreSheetRef?.current?.open();
                }
            } catch (error) {
                console.log("Error fetching team data: ", error.message);
            }
        } else {
            navigation.replace("Login");
        }
    }, [userData, isOnboarded]);

    useEffect(() => {
        fetchUserData();
    }, []);
...

    const feedDataMemoized = useMemo(() => feedData, [feedData]);
    const memoizedRenderItem = useCallback(
        ({ item, index }) => (
            <FeedPost
                postIndex={index}
                post={item}
                type="feed"
                userData={userData}
                currentChannel={currentChannel}
                setCurrentChannel={setCurrentChannel}
                refreshing={refreshing}
                onRefresh={onRefresh}
...
