...
     * @returns {void}
     */
    const handleLogout = async () => {
        setMenuVisible(false);
        await updateProfile();
        await logout();
        navigation.replace("Login");
    };

    /**
     * Navigates to the follower list screen.
     * @function handleFollowerList
     * @returns {void}
...
            [
                {
                    text: "Cancel",
                    onPress: () => console.log("Cancel"),
                },
                {
                    text: "Delete",
                    onPress: () => handleDeleteAccount(),
                },
            ],
        );
    };

...
            [
                {
                    text: "Cancel",
                    onPress: () => console.log("Cancel"),
                },
                {
                    text: "Logout",
                    onPress: () => handleLogout(),
                },
            ],
        );
    };

...
    const ProfileMenuList = [
        {
            label: "Logout",
            onPress: handleLogoutModal,
        },
        {
            label: "Delete My Account",
            onPress: handleDeleteModal,
        },
    ];

    return (
        <SafeAreaView style={styles.wrapper}>
...
            <View style={[styles.barContainer, { top: insets.top }]}>
                <TouchableOpacity
                    onPress={() => {
                        setMenuVisible((prev) => !prev);
                    }}
                    hitSlop={{ top: 20, bottom: 20, left: 30, right: 30 }}
                    testID="profile-more"
                >
                    <BarsSVG width={25} height={25} color="#000" />
                </TouchableOpacity>
                {menuVisible && <PopUpMenu menuList={ProfileMenuList} />}
            </View>
            <View style={styles.topContainer}>
...
                        onPress={() => {
                            navigation.navigate("Invitations", {
                                isProfile: true,
                            });
                        }}
                    >
                        <Text style={styles.text}>All Teams</Text>
                    </TouchableOpacity>
                    <TouchableOpacity
                        style={styles.teamBtn}
                        onPress={() => {
                            navigation.navigate("SendInvitation");
                        }}
                    >
                        <Text style={styles.text}>Invite Friends</Text>
                    </TouchableOpacity>
                </View>
                <View style={styles.separator} />
            </View>
            {/* Rest of the code for Profile component */}
            <View style={{ paddingBottom: "15%" }}>
...
