...
                        subject line "Account deletion request". We will respond
                        to your request within 14 days and promptly destroy all
                        data associated with your account.{"\n"}
                    </Text>
                </ScrollView>
                <View style={styles.buttonLogin}>
                    <Button title="Accept" onPress={goToSignUp} />
                </View>

                <View style={styles.line} />
            </View>
        </>
    );
...
