...
import PostDetail from "./screens/PostDetail";
import PostScreen from "./screens/PostScreen";
import Privacy from "./screens/Privacy";
import Profile from "./screens/Profile";
import ResetPassword from "./screens/ResetPassword";
import SendInvitation from "./screens/SendInvitation";
import SignUp from "./screens/Signup";
import SinglePost from "./screens/SinglePost";
import UserPage from "./screens/UserPage";
import YourTeam from "./screens/YourTeam";

const Stack = createNativeStackNavigator();

...
