...
                            {!loading && (
                                <TouchableOpacity
                                    disabled={loading}
                                    onPress={handleSubmit(onSubmitHandler)}
                                >
                                    <Text style={styles.submitText}>
                                        Get Started
                                    </Text>
                                </TouchableOpacity>
                            )}
                        </View>
                    </View>
                </TouchableWithoutFeedback>
...
