...
            [
                {
                    text: "Cancel",
                    style: "cancel",
                },
                {
                    text: "Confirm",
                    style: "destructive",
                    onPress: async () => {
                        try {
                            //remove image key
                            setAvatarSource(null);
                            profileImageOptionsSheetRef?.current?.close();
...
                                    onChangeText={(text) =>
                                        setUserPassword(text.replace(/\s/g, ""))
                                    }
                                    autoCapitalize="none"
                                    autoCorrect={false}
                                    secureTextEntry={!passwordVisible}
                                    testID="new-password-edit"
                                />
                                <TouchableOpacity
                                    onPress={() => {
                                        setPassWordVisible((prev) => !prev);
                                    }}
                                    style={styles.icon}
...
                                            text.replace(/\s/g, ""),
                                        )
                                    }
                                    autoCapitalize="none"
                                    autoCorrect={false}
                                    secureTextEntry={!confirmPassWordVisible}
                                    testID="confirm-password-edit"
                                />
                                <TouchableOpacity
                                    onPress={() => {
                                        setConfirmPasswordVisible(
                                            (prev) => !prev,
                                        );
...
