...
            await revertInvitation(inviteeId, status);
            setInviteCount?.((prev) => prev - 1);
            setInvitedUsers((prev) =>
                prev.filter((user) => user.id !== inviteeId),
            );
            const user = users[index];
            user["status"] = "Invite";
            const updatedUsers = users;
            updatedUsers.splice(index, 1, user);
            setUsers(updatedUsers);
            showMessage({
                message: "Invitation withdrawn!",
                type: "info",
...
                    const bgColor = pending
                        ? "#A1A0A0"
                        : accepted
                          ? theme.colors.white
                          : theme.colors.green;
                    const label = pending
                        ? "Pending"
                        : accepted
                          ? "Joined"
                          : status;
                    const color = accepted
                        ? theme.colors.green
                        : theme.colors.white;
...
