...
                    <TeamContainer isFocused={isFocused} />
                </View>
                <View style={styles.container}>
                    <InviteContainer
                        iconSize={{ width: 22, height: 22 }}
                        barStyles={styles.searchBar}
                        placeholder="Search"
                        invitedUsers={invitedUsers}
                        setInvitedUsers={setInvitedUsers}
                        searchedUser={searchedUser}
                        setSearchedUser={setSearchedUser}
                        selectedSwitch={selectedSwitch}
                    />
...
