...
            await revertInvitation(inviteeId, status);
            setInviteCount?.((prev) => prev - 1);
            setInvitedUsers((prev) =>
                prev.filter((user) => user.id !== inviteeId),
            );

            updateUserStatus(inviteeId, "Invite");
            showMessage({
                message: "Invitation withdrawn!",
                type: "info",
            });
        } catch (err) {
            console.log("error:-", err);
...
                    </Text>
                </View>
                {/* {inviter && (
                    <UserItem
                        source={getImageUrl(inviter.profileImageKey)}
                        username={inviter.userName}
                        label="Added"
                        variant="outlined"
                        color={theme.colors.lightBlue}
                        disabled
                    />
                )} */}
                <Text style={styles.subText}>
...
