...
    const { resetPassword } = useAuth();
    const email = route.params.email;

    /**
     * Handles the submission to reset the user's password:
     * - Calls the 'resetPassword' function to reset the password for the provided email.
     * - Navigates to the 'Login' screen after successfully resetting the password.
     */
    const handleReset = async (formData) => {
        const { userPassword } = formData;
        await resetPassword(email, userPassword);
        navigation.navigate("Login");
    };
...
                                </Text>
                            )}
                        </View>
                    </View>
                    <View style={styles.loginButton}>
                        <Button
                            title="Submit"
                            onPress={handleSubmit(handleReset)}
                        />
                    </View>
                </View>
            </TouchableWithoutFeedback>
        </KeyboardAvoidingView>
...
