...
     * - Displays an 'Email Verified' alert.
     * - Navigates to the next route with the given parameters after successful OTP verification.
     */
    const handleSubmit = async () => {
        console.log("handle submit");
        if (!otp.trim().length) {
            setError("Enter 6 digit OTP");
            return;
        }
        setLoading(true);
        try {
            await verifyOtp(email, otp);
            Alert.alert("Email Verified");
...
