...
                            )}
                        </View>
                    </View>
                    <View style={styles.forgotPasswordButton}>
                        <TouchableOpacity onPress={handleForgotPassword}>
                            <Text style={styles.forgotPassword}>
                                Forgot Password?
                            </Text>
                        </TouchableOpacity>
                    </View>

                    {loading && (
                        <View style={styles.loader}>
...
