...
            const res = await postEmailInvitation(getValues("inviteeEmail"));
            if (res && res.success === false) {
                Alert.alert(res.message);
                reset();
                return;
            }
            showMessage({ message: "Invitation sent!", type: "success" });
            reset();
        } catch (err) {
            console.log("Error:- ", err);
        } finally {
            setLoading(false);
        }
...
                        style={styles.btn}
                    >
                        {loading ? (
                            <Loader size="small" color="#fff" />
                        ) : (
                            <Text style={styles.btnText}>
                                Send invite email
                            </Text>
                        )}
                    </TouchableOpacity>
                </View>
            </View>
        </SafeAreaView>
...
