appId: "com.mycurio.curio"
---
- assertVisible: "Login"

- tapOn:
      point: 14%,51%
- inputText: "florance@yopmail.com"

- tapOn:
      point: 12%,29%

- tapOn:
      point: 12%,59%
- inputText: "Test@1234"

- tapOn: "Login"
- waitForAnimationToEnd

- assertNotVisible: "Login"
- waitForAnimationToEnd
- tapOn:
      id: "profile-nav-icon"
- waitForAnimationToEnd
- tapOn:
      id: "profile-settings"
- waitForAnimationToEnd
- tapOn:
      id: "new-password-edit"
- inputText: "newPassword"
- tapOn:
      point: "11%,23%"
- tapOn:
      id: "confirm-password-edit"
- inputText: "newPassword"
- tapOn:
      point: "11%,23%"
- swipe:
      start: "45%,83%"
      end: "50%,60%"
      duration: 632

- tapOn: "Confirm"
- waitForAnimationToEnd
- tapOn:
      id: "profile-more"
- tapOn: "Logout"
- tapOn: "Logout"
- waitForAnimationToEnd
- assertVisible: "Login"
- tapOn:
      point: 14%,51%
- inputText: "florance@yopmail.com"

- tapOn:
      point: 12%,29%

- tapOn:
      point: 12%,59%
- inputText: "Test@1234"

- tapOn: "Login"
- waitForAnimationToEnd
- tapOn:
      id: "profile-nav-icon"
- waitForAnimationToEnd
- tapOn:
      id: "profile-settings"
- waitForAnimationToEnd
- tapOn:
      id: "new-password-edit"
- inputText: "Test@1234"
- tapOn:
      point: "11%,23%"
- tapOn:
      id: "confirm-password-edit"
- inputText: "Test@1234"
- tapOn:
      point: "11%,23%"
- swipe:
      start: "45%,83%"
      end: "50%,60%"
      duration: 632
